--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
 <body>
-    
+   <main>
+    <img src="https://d2d7ho1ae66ldi.cloudfront.net/ArquivoNoticias/ff674af2-062d-11ee-aa6e-9587410378a2/Screen+Shot+2023-06-08+at+11.54.30+AM.png" alt="capa do filme homem aranha">
+    <h1>Juliana Aquino</h1>
+    <p>Olá, eu sou a Juliana e tenho 16 anos, gosto de esportes e de músicas</p>
+    <section>
+      <h2>Músicas favoritas</h2>  
+        <ol>
+    <li>A morte do autotune- Matue</li>
+    <li>Faça voce mesmo- Ret</li>
+    <li>N.A.D.A.B.O.M- Costa gold</li>
+        </ol>
+    </section>
+   </main> 
 </body>
 </html>
