--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link rel="stylesheet" href="style.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
@@ -12,7 +15,7 @@
     <h1>Juliana Aquino</h1>
     <p>Olá, eu sou a Juliana e tenho 16 anos, gosto de esportes e de músicas</p>
     <section>
-      <h2>Músicas favoritas</h2>  
+      <h2 class="tituloMusicas">Músicas favoritas</h2>  
         <ol>
     <li>A morte do autotune- Matue</li>
     <li>Faça voce mesmo- Ret</li>
