--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h1>Juliana Aquino</h1>
     <p>Olá, eu sou a Juliana e tenho 16 anos, gosto de esportes e de músicas</p>
     <section>
-      <h2 class="tituloMusicas">Músicas favoritas</h2>  
+        <h2 class="tituloMusicas">Músicas favoriras</h2>
         <ol>
     <li>A morte do autotune- Matue</li>
     <li>Faça voce mesmo- Ret</li>
